syntax = "proto3";

package file;

option go_package = "./;proto";

message FileId {
    string id = 1;
}

message FileInfo {
    FileId id = 1;
    string filename = 2;
    string login = 3;
    uint64 created = 4;
    uint64 modified = 5;
    uint64 size = 6;
    string comment = 7;
}

message FileStream {
    oneof data {
        FileInfo info = 1;
        bytes chunk_data = 2;
    };
}

message UploadResponse {
    FileId id = 1;
}

message ListFiles {
    repeated FileInfo files = 1;
}
